--- a/views/vwAdmin/role-register/role-register-menu.hbs
+++ b/views/vwAdmin/role-register/role-register-menu.hbs
@@ -44,8 +44,8 @@
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
             <button class="nav-link active" id="pills-reporter-tab" data-toggle="pill"
-                data-target="#pills-reporter-tab-content" type="button" role="tab" aria-controls="pills-reporter-tab-content"
-                aria-selected="true">
+                data-target="#pills-reporter-tab-content" type="button" role="tab"
+                aria-controls="pills-reporter-tab-content" aria-selected="true">
                 <b>Ứng tuyển writer</b>
             </button>
         </li>
@@ -84,7 +84,8 @@
                     <tr data-status="{{this.status}}">
                         <td>{{this.user_name}}</td>
                         <td>
-                            <span class="d-inline-block text-truncate" style="max-width: 200px;" title="{{this.self_access}}">
+                            <span class="d-inline-block text-truncate" style="max-width: 200px;"
+                                title="{{this.self_access}}">
                                 {{this.self_access}}
                             </span>
                         </td>
@@ -103,6 +104,37 @@
                     {{/each}}
                 </tbody>
             </table>
+            <!-- Pagination for Writer -->
+            <div class="mt-3 d-flex justify-content-center">
+                <nav aria-label="Pagination">
+                    <ul class="pagination">
+                        <!-- Nút Previous -->
+                        {{#if (greater currentPage 1)}}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{subtract currentPage 1}}" aria-label="Previous"
+                                style="background-color: #dc3545; color: #fff; border-color: #dc3545;">&laquo;</a>
+                        </li>
+                        {{/if}}
+
+                        <!-- Số Trang -->
+                        {{#each (range 1 totalPages)}}
+                        <li class="page-item {{#if (eq this ../currentPage)}}active{{/if}}">
+                            <a class="page-link" href="?page={{this}}" style="background-color: {{#if (eq this ../currentPage)}}#fff{{else}}#dc3545{{/if}}; 
+                           color: {{#if (eq this ../currentPage)}}#dc3545{{else}}#fff{{/if}}; 
+                           border-color: #dc3545;">{{this}}</a>
+                        </li>
+                        {{/each}}
+
+                        <!-- Nút Next -->
+                        {{#if (less currentPage totalPages)}}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{add currentPage 1}}" aria-label="Next"
+                                style="background-color: #dc3545; color: #fff; border-color: #dc3545;">&raquo;</a>
+                        </li>
+                        {{/if}}
+                    </ul>
+                </nav>
+            </div>
             {{else}}
             <p class="text-center text-muted">Chưa có đơn đăng ký nào.</p>
             {{/if}}
@@ -133,7 +165,8 @@
                     <tr data-status="{{this.status}}">
                         <td>{{this.user_name}}</td>
                         <td>
-                            <span class="d-inline-block text-truncate" style="max-width: 200px;" title="{{this.self_access}}">
+                            <span class="d-inline-block text-truncate" style="max-width: 200px;"
+                                title="{{this.self_access}}">
                                 {{this.self_access}}
                             </span>
                         </td>
@@ -152,10 +185,42 @@
                     {{/each}}
                 </tbody>
             </table>
+            <!-- Pagination for Editor -->
+            <div class="mt-3 d-flex justify-content-center">
+                <nav aria-label="Pagination">
+                    <ul class="pagination">
+                        <!-- Nút Previous -->
+                        {{#if (greater currentPage 1)}}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{subtract currentPage 1}}" aria-label="Previous"
+                                style="background-color: #dc3545; color: #fff; border-color: #dc3545;">&laquo;</a>
+                        </li>
+                        {{/if}}
+
+                        <!-- Số Trang -->
+                        {{#each (range 1 totalPages)}}
+                        <li class="page-item {{#if (eq this ../currentPage)}}active{{/if}}">
+                            <a class="page-link" href="?page={{this}}" style="background-color: {{#if (eq this ../currentPage)}}#fff{{else}}#dc3545{{/if}}; 
+                           color: {{#if (eq this ../currentPage)}}#dc3545{{else}}#fff{{/if}}; 
+                           border-color: #dc3545;">{{this}}</a>
+                        </li>
+                        {{/each}}
+
+                        <!-- Nút Next -->
+                        {{#if (less currentPage totalPages)}}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{add currentPage 1}}" aria-label="Next"
+                                style="background-color: #dc3545; color: #fff; border-color: #dc3545;">&raquo;</a>
+                        </li>
+                        {{/if}}
+                    </ul>
+                </nav>
+            </div>
             {{else}}
             <p class="text-center text-muted"><b>Chưa có đơn đăng ký nào.</b></p>
             {{/if}}
         </div>
+
     </div>
 </div>
 
