Revert "Merge branch 'dev' into admin"
This reverts commit 8df6684301edf521817420eb0c01f9c59844991e, reversing
changes made to 79e0df739804d0eebafb1794a04308bd58c3032a.

--- a/views/vwAccount/information.hbs
+++ b/views/vwAccount/information.hbs
@@ -291,14 +291,14 @@
             <div class="d-flex align-items-center">
                 <img src="/others/facebook (1).png" style="width: 30px; height: 30px"/>
                 <div class="ml-3">
-                    <div class="font-weight-bold">Facebook</div>
-                    <div> Liên kết facebook</div>
+                    <div class="font-weight-bold">Google</div>
+                    <div> Liên kết google</div>
                 </div>
             </div>
             <div class="">
                 <div class="custom-control custom-switch">
-                    <input type="checkbox" class="custom-control-input " id="customSwitch2">
-                    <label class="custom-control-label" for="customSwitch2"></label>
+                    <input type="checkbox" class="custom-control-input " id="customSwitch1">
+                    <label class="custom-control-label" for="customSwitch1"></label>
                 </div>
 
             </div>
