--- a/static/css/auth/login-register.css
+++ b/static/css/auth/login-register.css
@@ -1,6 +1,5 @@
 .nav-tabs .nav-link {
     color: rgb(255, 255, 255); /* Màu chữ mặc định của các tab chưa được chọn */
-    border: none;
 }
 
 .nav-link {
@@ -10,16 +9,5 @@
   
 .nav-link:hover {
     color: #ffffff; 
-    background-color: #dc3545; 
+    background-color: rgba(250, 61, 61, 0.63); 
 }
-
-.btn-close-custom {
-    background-color: #dc3545 !important;;
-    color: #ffffff !important;;
-    border: none !important;;
-  }
-  
-  .btn-close-custom:hover {
-    background-color: #c82333 !important;; 
-    color: #ffffff !important;
-  }
