--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,23 +9,15 @@
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.css"
-        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/static/css/account-information/layout-account.css">
     <link rel="stylesheet" href="/static/css/auth/login-register.css">
-    <link rel="stylesheet" href="/static/css/auth/forgot-password.css">
-    <link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-fileinput@5.5.0/css/fileinput.min.css" media="all"
-        rel="stylesheet" type="text/css" />
-    <link href="https://cdn.jsdelivr.net/npm/tom-select@2.4.1/dist/css/tom-select.css" rel="stylesheet">
-
     {{{_sections.css}}}
 </head>
 
 <body style="background-color: #E6E9F1">
     <div class="bg-danger d-flex justify-content-center align-items-center " style="height: 50px">
-        <a href="/" style="text-decoration: none">
-            <h3 class="font-weight-bold text-white ">Tuổi Già</h3>
-        </a>
+        <h3 class="font-weight-bold text-white ">WebSite Name</h3>
     </div>
 
     {{{body}}}
@@ -38,19 +30,19 @@
         </div>
         <div class="row mt-3 pb-3" style="border-bottom: 1px solid  #EEEEEE">
             <div class="col-5 flex-column justify-content-between">
-                <div>Tổng biên tập: T.T. Biện Xuân Huy</div>
-                <div>Giấy phép hoạt động báo điện tử tiếng Việt, tiếng Anh Số 561/GP-BTTTT, cấp ngày 25-11-2022
-                </div>
-                <div>Thông tin tòa soạn - FIE_K22 HCMUTE</div>
+                <div>Tổng biên tập: Lê Thế Chữ</div>
+                <div>Giấy phép hoạt động báo điện tử tiếng Việt, tiếng Anh Số 561/GP-BTTTT, cấp ngày 25-11-2022.</div>
+                <div>Thông tin tòa soạn - Thành Đoàn TP.HCM</div>
             </div>
+
             <div class="col-5 d-flex flex-column justify-content-between">
                 <div>
-                    Địa chỉ: Số 1 Võ Văn Ngân, TP. Thủ Đức, Tp. Hồ Chí Minh
+                    Địa chỉ: 60A Hoàng Văn Thụ, P.9, Q.Phú Nhuận, Tp. Hồ Chí Minh
                 </div>
                 <div>
-                    Hotline: 0908.338.918 - Email: 22110031@student.hcmute.edu.vn
+                    Hotline: 0918.033.133 - Email: tto@tuoitre.com.vn
                 </div>
-                <div>Phòng Quảng Cáo Báo Tuổi Già: 0908.338.918</div>
+                <div>Phòng Quảng Cáo Báo Tuổi Trẻ: 028.39974848</div>
             </div>
             <div class="col-2 footer__contact-link d-flex flex-column justify-content-between">
                 <div>
@@ -67,17 +59,18 @@
         </div>
         <div class="d-flex justify-content-between py-3">
             <div>
-                © Copyright 2024 TuoiGia Online, All rights reserved ® Tuổi Già Online giữ bản quyền nội dung trên
-                website này
+                © Copyright 2023 TuoiTre Online, All rights reserved ® Tuổi Trẻ Online giữ bản quyền nội dung trên
+                website
+                này
             </div>
             <div>
-                <a href="https://youtu.be/xvFZjo5PgG0?si=v_lXYe0q33sw9RkO" target="_blank">
+                <a>
                     <img src="/static/images/others/social.png" />
                 </a>
-                <a href="https://youtu.be/xvFZjo5PgG0?si=v_lXYe0q33sw9RkO" target="_blank">
+                <a>
                     <img src="/static/images/others/facebook.png" style="width: 26px;height: 26px;margin-left: -2px" />
                 </a>
-                <a href="https://youtu.be/xvFZjo5PgG0?si=v_lXYe0q33sw9RkO" target="_blank">
+                <a>
                     <img src="/static/images/others/instagram.png" style="width: 26px;height: 26px" />
                 </a>
             </div>
@@ -95,25 +88,8 @@
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-
-    {{!-- Select nhieu muc --}}
-    <script src="https://cdn.jsdelivr.net/npm/tom-select@2.4.1/dist/js/tom-select.complete.min.js"></script>
-
-    {{!-- tinyMCE --}}
-    <script src="https://cdn.tiny.cloud/1/cdmf4otr4i6qmtynngm9mxc5j1hb906knqi3o9dxf43zn57c/tinymce/7/tinymce.min.js"
-        referrerpolicy="origin"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/7.6.0/plugins/help/js/i18n/keynav/vi.min.js"></script>
-
-    {{!-- file Input --}}
-    <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-fileinput@5.5.0/js/fileinput.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.5.4/js/locales/vi.min.js"></script>
-
     {{{_sections.js}}}
-
 </body>
 
 </html>
