--- a/views/vwHome/articleNewest.hbs
+++ b/views/vwHome/articleNewest.hbs
@@ -16,7 +16,7 @@
             <div class="row mb-3 border-bottom py-3" style="border-radius: 10px; ">
                 <div class="col-3">
                     <a href="/article?id={{article_id}}">
-                    <img src="{{main_thumb}}" class="rounded"
+                    <img src="/others/{{main_thumb}}" class="rounded"
                          style="object-fit:cover; width: 200px; height: 150px;"/>
                     </a>
                 </div>
