fix wrong route in top cat articles

--- a/views/vwHome/home.hbs
+++ b/views/vwHome/home.hbs
@@ -107,7 +107,7 @@
                                 </span>
                             </h5>
                             </a>
-                            <a href="/aricle?id={{article.id}}">
+                            <a href="/article?id={{article.id}}">
                                 <img src="{{article.main_thumb}}"
                                     style="border-radius:10px; object-fit:cover; width:100%;">
                             </a>
