--- a/views/vwHome/articleNewest.hbs
+++ b/views/vwHome/articleNewest.hbs
@@ -21,11 +21,20 @@
                     </a>
                 </div>
                 <div class="col-9 px-2 pl-0 d-flex flex-column">
-                    <p class="mb-0 article-text d-flex">
-                        {{#each categoryList}}
-                            <a href="/cat?catId={{category_id}}" class="category-link mr-4">{{name}}</a>
-                        {{/each}}
-                    </p>
+                    <div class="d-flex justify-content-between">
+                        <p class="mb-0 article-text d-flex">
+                            {{#each categoryList}}
+                                <a href="/cat?catId={{category_id}}" class="category-link mr-4">{{name}}</a>
+                            {{/each}}
+                        </p>
+                        {{#if is_premium}}
+                            <div class="px-2 d-flex align-items-center"
+                                 style="border-radius: 10px;background-color: #E0B01F">
+                                <img src="/others/service.png" class="mr-1" width="20" height="20"/>
+                                <span class="text-white font-weight-bold "> Premium</span>
+                            </div>
+                        {{/if}}
+                    </div>
                     {{!-- Thêm link vào bài viết sau nhe --}}
                     <a class="font-weight-bold article-title" href="/article?id={{article_id}}">{{title}}</a>
                     <div class="article-text mt-1">{{abstract}}</div>
